Added compulsory marquee

--- a/default.html
+++ b/default.html
@@ -5,7 +5,7 @@
     <title>This is a very serious title</title>
 </head>
 <body>
-<p>Hello Everybody!</p>
+<marquee>Hello Everybody!</marquee>
 <button type="button" onclick="playInterval()">Play An Interval!</button>
 
 <script src="getMusic.js"></script>
