Added Repeat and Guess buttons

--- a/default.html
+++ b/default.html
@@ -7,7 +7,9 @@
 <body>
 <marquee>Hello Everybody!</marquee>
 <button type="button" onclick="playInterval()">Play An Interval!</button>
-
+<button type="button" onclick="repeatInterval()">Repeat Interval!</button>
+<br />
+<input type="text" name="guessBox" /><button type="button" onclick="checkGuess()">Guess</button>
 <script src="getMusic.js"></script>
 </body>
 </html>
