Re-Added compulsory marquee

--- a/MainScreen.html
+++ b/MainScreen.html
@@ -58,6 +58,6 @@
         <a href="MelodyDictation.html">Melodic Dictation</a>
     </h2>
 </div>
-<div id="footer">hello world I put my foot in a footer!</div>
+<div id="footer"><marquee>hello world I put my foot in a footer!</marquee></div>
 </body>
 </html>
