did some tidying up in the main directory, added a new folder for images and put got images for clefs and time signatures. Rhythm Dictation now displays a palate with clef, time signature and bars, doesn't play anything yet, not input either.

--- a/Intervals.html
+++ b/Intervals.html
@@ -36,7 +36,7 @@
     <button type="button" onclick="repeatInterval()">Repeat Interval!</button>
     <br />
     <input type="text" name="guessBox" /><button type="button" onclick="checkGuess()">Guess</button>
-    <script src="getMusic.js"></script>
+    <script src="Code/getMusic.js"></script>
 </div>
 
 </body>
