--- a/MainScreen.html
+++ b/MainScreen.html
@@ -10,17 +10,13 @@
             text-align:center;
             padding:5px;
         }
-        #leftPadding{
-            height: 600px;
-            width: 360px;
-            float: left;
-        }
         #leftList{
             line-height: 50px;
             height: 600px;
             width: 300px;
             padding: 10px;
             float: left;
+            text-align: center;
         }
         #rightList{
             line-height: 50px;
@@ -28,6 +24,7 @@
             width: 300px;
             padding: 10px;
             float: left;
+            text-align: center;
         }
         #footer {
             background-color:black;
@@ -54,7 +51,7 @@
     <h2>
         <a href="Aural.html">Aural Analysis</a><br>
         <a href="PitchDictation.html">Pitch Dictation</a><br>
-        <a href="RhythmDictation.html">Rhythm Dictation</a><br>
+        <a href="RhythmDictation/RhythmDictation.html">Rhythm Dictation</a><br>
         <a href="MelodyDictation.html">Melodic Dictation</a>
     </h2>
 </div>
